Fix line-height of project lines to fix multi-line gap

--- a/theme.less
+++ b/theme.less
@@ -58,6 +58,8 @@ item[data-type="task"] {
 
 item[data-type="project"] {
   font-weight: bold;
+  line-height-multiple: 1;
+  font-size: @user-font-size;
 }
 
 item[data-done] {
